--- a/hiera.yaml
+++ b/hiera.yaml
@@ -10,6 +10,7 @@ hierarchy:
     paths:
       - "nodes/%{trusted.certname}.yaml"
       - "nodes/base.yaml"
+      - "bla.yaml"
       - "common.yaml"
       - "test.yaml"
       - "test2.yaml"
