--- a/hiera.yaml
+++ b/hiera.yaml
@@ -13,7 +13,8 @@ hierarchy:
       - "common.yaml"
   - name: "Admin password"
     lookup_key: eyaml_lookup_key
-    paths: "adminpw.eyaml"
+    paths: 
+      - "adminpw.eyaml"
     options:
       pkcs7_private_key: /etc/puppetlabs/puppet/keys/private_key.pkcs7.pem
       pkcs7_public_key:  /etc/puppetlabs/puppet/keys/public_key.pkcs7.pem
