--- a/data/nodes/base.yaml
+++ b/data/nodes/base.yaml
@@ -1,3 +1,3 @@
 ---
 ntpservers: [ "0.sg.pool.ntp.org", "1.sg.pool.ntp.org", "2.sg.pool.ntp.org", "3.sg.pool.ntp.org" ]
-motd: "Howdy Partner!"
+motd: "Howdy Partner!\n"
