--- a/data/nodes/base.yaml
+++ b/data/nodes/base.yaml
@@ -1,4 +1,5 @@
 ---
 ntpservers: [ "0.us.pool.ntp.org", "1.us.pool.ntp.org", "2.us.pool.ntp.org", "3.us.pool.ntp.org" ]
 motd: "Howdy Partner!\n"
-packages: [ "wget", "telnet" ] 
+packages: [ "wget", "telnet" ]
+users: ["tom", "jerry" ]
