--- a/data/nodes/webserver/nginx.yaml
+++ b/data/nodes/webserver/nginx.yaml
@@ -2,7 +2,7 @@
 nginx::nginx_servers:
   'vhost1.com':
     www_root: '/var/www/vhost1.com/html'
-    port: 8080
+    listen_port: 8080
   'vhost2.com':
     www_root: '/var/www/vhost2.com/html'
-    port: 8000
+    listen_port: 8000
