--- a/data/nodes/webserver/iis.yaml
+++ b/data/nodes/webserver/iis.yaml
@@ -1,1 +1,6 @@
-
+---
+iis_website::settings:
+  website1:
+    website_name:         website1
+    application_pool:     DefaultAppPool
+    physicalpath:         c:\\inetpub\\website1
