--- a/data/nodes/webserver/nginx.yaml
+++ b/data/nodes/webserver/nginx.yaml
@@ -3,6 +3,6 @@ nginx::nginx_servers:
   'vhost1.com':
     www_root: '/var/www/vhost1.com/html'
     listen_port: 8080
-  'vhost2.com':
-    www_root: '/var/www/vhost2.com/html'
-    listen_port: 8000
+#  'vhost2.com':
+#    www_root: '/var/www/vhost2.com/html'
+#    listen_port: 8000
