--- a/hiera.yaml
+++ b/hiera.yaml
@@ -3,10 +3,10 @@ version: 5
 
 defaults:
   datadir: "data"
-  data_hash: yaml_data
 
 hierarchy:
-  - name: "Yaml backend"
+  - name: "Hiera eyaml data"
+    lookup_key: eyaml_lookup_key
     paths:
       - "nodes/%{trusted.certname}.yaml"
       - "nodes/webserver/nginx.yaml"
@@ -14,9 +14,6 @@ hierarchy:
       - "nodes/base.yaml"
       - "compliance/cem.yaml"
       - "common.yaml"
-  - name: "Admin password"
-    lookup_key: eyaml_lookup_key
-    paths: 
       - "adminpw.eyaml"
     options:
       pkcs7_private_key: /etc/puppetlabs/puppet/keys/private_key.pkcs7.pem
