--- a/data/nodes/webserver/nginx.yaml
+++ b/data/nodes/webserver/nginx.yaml
@@ -1,8 +1,8 @@
 ---
-#nginx::nginx_servers:
-#  'jw-demo2-nix1.aws.tsedemos.com':
-#    www_root: '/var/www/jw-demo2-nix1/html'
-#    listen_port: 8080
+nginx_servers:
+  'jw-demo2-nix1.aws.tsedemos.com':
+    www_root: '/var/www/jw-demo2-nix1/html'
+    listen_port: 8080
   #'vhost2.com':
   #  www_root: '/var/www/vhost2.com/html'
   #  listen_port: 80
