--- a/data/nodes/webserver/nginx.yaml
+++ b/data/nodes/webserver/nginx.yaml
@@ -1,7 +1,7 @@
 ---
 nginx::nginx_servers:
   'jw-demo2-nix1.aws.tsedemos.com':
-    www_root: '/var/www/jw-demo2-nix1/html'
+    www_root: '/var/www/jw-demo2-nix1.aws.tsedemos.com/html'
     listen_port: 8080
   #'vhost2.com':
   #  www_root: '/var/www/vhost2.com/html'
